# bloom

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  claude-code-integration.md  configuration.md  contributing.md  onboarding.md  security.md
src/bloom/: __init__.py  __main__.py  cli.py  config.py  db.py  recall.py  server.py  tools.py
src/bloom/embedders/: __init__.py  _dim_cache.py  anthropic.py  base.py  local.py  none.py  openai.py
tests/: test_config.py  test_db.py  test_db_concurrency.py  test_embedders.py  test_hook.py  test_recall.py  test_tools.py  test_tools_validation.py
