[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "bloom-mcp"
version = "0.3.0.dev0"
description = "Persistent cross-session memory for Claude Code and any MCP-compatible client."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Jonah Tebaa" },
]
keywords = ["mcp", "claude", "claude-code", "memory", "llm", "agent", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["voyageai>=0.2"]
local = ["sentence-transformers>=2.2", "numpy>=1.24"]
all = ["bloom-mcp[openai,anthropic,local]"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/jonahtebaa/bloom"
Documentation = "https://github.com/jonahtebaa/bloom#readme"
Issues = "https://github.com/jonahtebaa/bloom/issues"
Changelog = "https://github.com/jonahtebaa/bloom/blob/main/CHANGELOG.md"

[project.scripts]
bloom-mcp = "bloom.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bloom"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "docs/", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
